Tue Dec 23 20:17:06 2008  TAKAO Kouji  <kouji@takao7.net>

	* w102/docs/install.rd: 追加。

Tue Dec 23 20:16:17 2008  TAKAO Kouji  <kouji@takao7.net>

	* lv1/docs/install.rd: 更新。

	* w101/docs/install.rd: 同上。

Tue Dec 23 20:15:00 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/syslog-ng.rd: syslog-ng の説明を追加。

Tue Dec 23 20:14:32 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/keepalived.rd: keepalived の説明を追加。

Tue Dec 23 20:14:05 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/ipvsadm.rd: ipvsadm の説明を追加。

Tue Dec 23 20:13:24 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/dell_poweredge_t105.rd: 追記。

Mon Dec 15 20:10:57 2008  TAKAO Kouji  <kouji@takao7.net>

	* w101/docs/install.rd: 全体的に章を見直した。drbd について追記。

	* lv1/docs/install.rd: syslog-ng のインストールを追加。
	  ロードバランサについて追記。

	* common/docs/syslog-ng.rd: syslog-ng に関する文書を追加。

	* common/docs/keepalived.rd: LVS を実現するために使用できるソフトウェ
	  ア keepalived に関する文書を追加。
	
	* common/docs/ipvsadm.rd: IPVS を管理するためのソフトウェア
	  ipvsadm に関する文書を追加。

Mon Dec 15 00:23:10 2008  TAKAO Kouji  <kouji@takao7.net>

	* lv1/docs/install.rd: IPVS NAT のロードバランサのインストールを追記。

Mon Dec 15 00:21:58 2008  TAKAO Kouji  <kouji@takao7.net>

	* lv1/docs/install-pending.rd: ペンディングした作業ログを記述するた
	  めのファイルを追加。

Mon Dec 15 00:18:25 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/debian: apt-line に必要なファイルを追加。

Mon Dec 15 00:12:06 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/scripts: スクリプトを配置するディレクトリを作成。

	* common/scripts/packet-filter: パケットフィルタを実現するスクリプトを追加。

Sun Dec 14 20:27:41 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/debian/Makefile (all): apt-line に必要なファイルを作成する
	  ための Makefile を追加。

Sun Dec 14 20:21:23 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/dell_poweredge_t105.rd: インストールする Linux カーネ
	  ルを linux-image-2.6-i686 に変更。

Sun Dec 14 20:18:34 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/debian: deb パッケージを格納するためのディレクトリを追加。

	* common/debian/ipvsadm*: Linux カーネル 2.6.26 用の ipvsadm パッケー
	  ジを追加。
