@@ -1,0 +1,22 @@
+/etc/fstab
+/etc/mailname
+/etc/postfix/main.cf
+/etc/aliases
+/etc/hosts
+/etc/hosts.allow
+/etc/hosts.deny
+/etc/ssh/sshd_config
+/etc/ssh/ssh_config
+/etc/ntp.conf
+/etc/network/interfaces
+/etc/default/packet-filter
+/etc/packet-filter.d/000-modules
+/etc/packet-filter.d/001-default-policy
+/etc/packet-filter.d/010-lo
+/etc/packet-filter.d/015-lan
+/etc/packet-filter.d/020-icmp
+/etc/packet-filter.d/100-drops
+/etc/packet-filter.d/200-rejects
+/etc/packet-filter.d/300-accepts
+/etc/packet-filter.d/999-ulogd
+#/etc/logcheck/logcheck.logfiles
