@@ -1,3 +1,8 @@
+Tue Dec 23 20:18:08 2008  TAKAO Kouji  <kouji@takao7.net>
+
+	* capistrano: Capistrano を使ったシステム管理用のディレクトリと設定
+	  ファイルを追加。
+
 Tue Dec 23 20:17:06 2008  TAKAO Kouji  <kouji@takao7.net>
 
 	* w102/docs/install.rd: 追加。
